# view-finder-anywhere

./: .gitignore  README.md  build.gradle  circle.yml  settings.gradle
.circleci/: config.yml
APK/: ViewFinderAnywhere.apk  ViewFinderAnywhereUiPlugInIngress.apk  ViewFinderAnywhereUiPlugInRedFrame.apk  ViewFinderAnywhereUiPlugInTotalClear.apk
ViewFinderAnywhere/: build.gradle  google-services.json  lint.xml
ViewFinderAnywhere/src/main/: AndroidManifest.xml
ViewFinderAnywhere/src/main/cpp/: Android.mk  CMakeLists.txt  TraceLog.cpp  TraceLog.hpp  ViewFinderAnywhere.cpp  ViewFinderAnywhere.hpp
ViewFinderAnywhere/src/main/cpp/include/opengl/: ElementBase.hpp  SurfaceTextureFrame.hpp
ViewFinderAnywhere/src/main/cpp/include/opengl/shader/: ShaderGLSL.hpp  ShaderProgramFactory.hpp
ViewFinderAnywhere/src/main/cpp/include/opengl/util/: opengl_matrix.hpp
ViewFinderAnywhere/src/main/cpp/opengl/: ElementBase.cpp  ElementBase.hpp  SurfaceTextureFrame.cpp
ViewFinderAnywhere/src/main/cpp/opengl/shader/: ShaderProgramFactory.cpp
ViewFinderAnywhere/src/main/cpp/opengl/util/: opengl_matrix.cpp  opengl_matrix.hpp
ViewFinderAnywhere_UiPlugIn_Ingress/: build.gradle
ViewFinderAnywhere_UiPlugIn_Ingress/src/main/: AndroidManifest.xml
ViewFinderAnywhere_UiPlugIn_RedFrame/: build.gradle
ViewFinderAnywhere_UiPlugIn_RedFrame/src/main/: AndroidManifest.xml
ViewFinderAnywhere_UiPlugIn_TotalClear/: build.gradle
ViewFinderAnywhere_UiPlugIn_TotalClear/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+106 files in other folders)
